[package]
name = "autoencoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dfdx = {git = "https://github.com/coreylowman/dfdx", features = ["cuda", "safetensors"]}
dfdx-derives = {git = "https://github.com/coreylowman/dfdx" }
dfdx-core = {git = "https://github.com/coreylowman/dfdx" }

serde = "1.0.192"
csv = "1.3.0"
safetensors = "0.4.0"

[features]
default = ["cuda"]
cuda = []
safetensors = []
